--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
   <body>
     <noscript>
       <strong>We're sorry but bifrost doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <test>testcode</test>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
