--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,9 @@
     <noscript>
       <strong>We're sorry but bifrost doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
       <test>testcode</test>
+      <test>testcode</test>
+      <test>testcode</test>
+      <test>testcode</test>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
