--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but bifrost doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but bifrost doesn't zzzzz work properly without JavaScript enabled. Please enable it to continue.</strong>
       <test>testcode</test>
     </noscript>
     <div id="app"></div>
